# role-bot

./: .gitignore  Cargo.toml  Dockerfile  flake.nix  init.sql  sample.docker-compose.yml
src/: add.rs  balance.rs  create.rs  delete.rs  extend.rs  list.rs  main.rs  main_channel.rs  new_role.rs  orphaned.rs  query.rs  remove.rs  take_ownership.rs  transfer.rs
