[package]
name = "role-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.4"
dashmap = { version = "6.1.0", features = ["serde"] }
rand = "0.9.1"
ron = "0.10.1"
serde = "1.0.219"
serenity = "0.12.4"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
