[package]
name = "role-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
dashmap = { version = "6.1", features = ["serde"] }
futures = "0.3"
rand = "0.9"
ron = "0.12"
serde = "1.0"
serenity = "0.12"
tokio = { version = "1.45", default-features = false, features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
